ExampleErrors/src/com/jake/example/errors/fields/Foo2.java
package com.jake.example.errors.fields;

public class Foo2 implements IFoo {

}
